--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,10 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+@layer utilities {
+  code {
+    @apply bg-black/[.05] dark:bg-white/[.06] px-1 py-0.5 rounded font-semibold;
+  }
+}
